Bug 131580 - UI: Dotted box around active tab in some dialogs and not in others
Summary: UI: Dotted box around active tab in some dialogs and not in others
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: Dialog-UX
  Show dependency treegraph
 
Reported: 2020-03-25 17:06 UTC by Telesto
Modified: 2020-09-04 22:27 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-03-25 17:06:51 UTC
Description:
Dotted box around active tab in some dialogs and not in others

Steps to Reproduce:
1. Open Writer
2. File -> Properties; click on the tabs (dotted box)
3. Format -> Paragraph; click on the tabs (no dotted box

Actual Results:
Inconsistent use dotted box around active tab

Expected Results:
Proper no dotted box (at least not on Windows)


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 7ae9c9572ccac55c0926b8a9779bb63c4236291c
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 V Stuart Foote 2020-03-25 23:00:25 UTC
I think the dashed outlines came in with work by Miklos on bug 127211

Just manifests with the work on Skia (slight difference between the Vulkan, and the raster rendering).

To me NAB.
Comment 2 Xisco Faulí 2020-03-31 12:55:06 UTC
Patch in gerrit: https://gerrit.libreoffice.org/c/core/+/91380
Changing status to Assigned
Comment 3 Commit Notification 2020-04-01 09:27:09 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3ee0628e269f16f0fee5dde51e90bbf5180413a2

SalInvert::N50 has 1x1 pixel checker size, not 2x2 (tdf#131580)

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Luboš Luňák 2020-04-01 09:30:56 UTC
There are 2 things here:
- The focus indicators used a different pattern, so they looked more distinct than they should. That's fixed by my commit.
- The "dotted box" is simply a focus indicator and it shows for whichever UI element has the focus. You can get the same effect for Format->Paragraph if you hit Shift+Tab once. So this is at most a minor UI inconsistency about where the default focus is for different dialogs => not a Skia bug.
Comment 5 Thomas Lendo QA 2020-09-04 22:27:39 UTC
Seems to be fixed.

Version: 7.1.0.0.alpha0+
Build ID: 18e4367c33f327cf09985105bde583cdcc7b2a46
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3
Locale: de-DE (de_DE.UTF-8); UI: en-US
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2020-09-03_13:51:39
Calc: threaded

Thank you, Luboš Luňák!