SalInvert::N50 has 1x1 pixel checker size, not 2x2 (tdf#131580)

This can be seen with widget styles that use invert() to draw focus
rectangle, such as with VCL gen or win backends.

Change-Id: I7fb36d1be5333e917f871f8504585e32abe82b5a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/91380
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>